--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
                 
         <div class="header-content">
-            <!-- <img class="invert-element" src="assets/images/banner/logo.svg" alt="banner mundo invertido" /> -->
+            <img class="invert-element" src="assets/images/banner/logo.svg" alt="banner mundo invertido" />
             <p class="invert-element">
               Uma jornada para quem não tem medo do desconhecido. O caminho para o
               Mundo invertido é incerto, repleto de obstáculos e perigos. Porém, a
